# data-engineering-portfolio

./: .gitignore  README.md  build_manifest.json
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/finance-gl-reconciliation/migrated-gcp/: pyproject.toml
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/finance-gl-reconciliation/migrated-gcp/config/: dev.yaml  prod.yaml
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/finance-gl-reconciliation/migrated-gcp/dag/: finance_gl_reconciliation_dag.py
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/finance-gl-reconciliation/migrated-gcp/sql/: gl_reconciliation.sql
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/finance-gl-reconciliation/migrated-gcp/src/finance_gl_reconciliation/: bigquery_runner.py  main.py  validation.py
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/finance-gl-reconciliation/migrated-gcp/tests/: test_fiscal_period.py  test_main.py  test_validation.py
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/inventory-sync-intraday/migrated-gcp/: pyproject.toml
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/inventory-sync-intraday/migrated-gcp/config/: dev.yaml  prod.yaml  qa.yaml  stage.yaml
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/inventory-sync-intraday/migrated-gcp/dag/: inventory_sync_intraday_dag.py
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/inventory-sync-intraday/migrated-gcp/src/inventory_sync_intraday/: main.py
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/inventory-sync-intraday/migrated-gcp/tests/unit/: conftest.py  test_delta_application.py  test_validation.py
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/pricing-nightly-batch/migrated-gcp/: pyproject.toml
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/pricing-nightly-batch/migrated-gcp/config/: dev.yaml  prod.yaml  qa.yaml  stage.yaml
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/pricing-nightly-batch/migrated-gcp/dag/: pricing_nightly_batch_dag.py
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/pricing-nightly-batch/migrated-gcp/src/dp_spark_common/: __init__.py
big-data-onprem-job-migration-to-gcp/14-job-migration/wave-0-pilot/pricing-nightly-batch/migrated-gcp/src/pricing_nightly_batch/: main.py
real-time-analytics-on-gcp/: .gitignore  (+5 more)
real-time-analytics-on-gcp/common/: pyproject.toml
real-time-analytics-on-gcp/common/supplychain_common/: config.py  retry.py  schema_validator.py
(+438 files in other folders)
